--- a/sonar-scanner.properties
+++ b/sonar-scanner.properties
@@ -4,4 +4,4 @@ sonar.projectVersion=2.0
 sonar.login=admin
 sonar.password=admin
 
-sonar.sources=C:\Users\610169\Desktop\DotnetApp\Hello\Hello.sln
+sonar.sources=Hello\
